# thesis

./: CMakeLists.txt  README.md
Prototype/website/: __init__.py
Prototype/website/backend/: CMakeLists.txt
Prototype/website/backend/data/: TUDelft_EWISurroundingsStandard.stl  blockMeshDict  cubes.stl  snappyHexMeshDict2  snappyHexMeshDict3  user_parameters.txt
Prototype/website/backend/src/: RoI.cpp  RoI.h  buildings.cpp  buildings.h  definitions.h  domain.cpp  domain.h  geometry.cpp  geometry.h  input.cpp  input.h  main.cpp  mesh2.cpp  mesh2.h  mesh3.cpp  mesh3.h  meshtools.cpp  meshtools.h  output.cpp  output.h  parameters.cpp  parameters.h  refinementboxes.cpp  refinementboxes.h
Prototype/website/histogram/: CMakeLists.txt
Prototype/website/histogram/src/: buildings.cpp  buildings.h  definitions.h  input.cpp  input.h  main.cpp  output.cpp  output.h
Prototype/website/static/: style_explanation.css  style_input.css  style_output.css
Prototype/website/static/images/: A_overlapping.pngZone.Identifier  A_sharpangles.pngZone.Identifier  A_shortedges.pngZone.Identifier  A_slivers.pngZone.Identifier  A_topo.pngZone.Identifier  A_topo_2.pngZone.Identifier  Domain with BRs.svgZone.Identifier  Model orientation.pngZone.Identifier
Prototype/website/templates/: explanation.html  form.html  input.html  output.html
src/: buildings.cpp  buildings.h  cfd.cpp  cfd.h  definitions.h  geometry.cpp  geometry.h  input.cpp  input.h  main.cpp  meshing.cpp  meshing.h  output.cpp  output.h
